<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="40dp"
    android:background="@drawable/background_player"
    android:paddingStart="40dp"
    android:paddingEnd="40dp">

    <ImageView
        android:id="@+id/export_complete_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_export_complete"
        android:contentDescription="@string/export_complete_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_export_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/export_complete"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/export_complete_image" />

    <TextView
        android:id="@+id/txt_export_complete_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="100dp"
        android:text="@string/file_created"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_export_complete" />

    <Button
        android:id="@+id/btn_export_complete"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_32"
        android:background="@drawable/background_export_btn"
        android:text="@string/ok"
        android:textSize="@dimen/sp_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_export_complete_info" />

</androidx.constraintlayout.widget.ConstraintLayout>