<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorXMediaPrimaryDark">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddImage"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/add_image"
        android:textSize="14sp"
        app:icon="@drawable/ic_add_img_camera"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/save_image"
        android:textSize="14sp"
        app:icon="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="@id/guidelineTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAddImage">

        <include
            android:id="@+id/includeEmptyImage"
            layout="@layout/empty_image_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/ivUploadedPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_background_desc"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <View
        android:id="@+id/dividerLogout"
        style="@style/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toTopOf="@id/layoutImageKitFeatures"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom" />

    <LinearLayout
        android:id="@+id/layoutImageKitFeatures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorXMediaPrimaryDark"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineBottom">


        <LinearLayout
            android:id="@+id/btnAddFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFlipHorizontally"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorXMediaPrimaryDark"
                android:contentDescription="@string/filter_icon_desc"
                android:padding="8dp"
                android:src="@drawable/ic_filter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="8dp"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnAddSticker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFlipVertically"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorXMediaPrimaryDark"
                android:contentDescription="@string/sticker_icon_desc"
                android:padding="8dp"
                android:src="@drawable/ic_sticker" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="8dp"
                android:text="@string/sticker"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnCrop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorXMediaPrimaryDark"
                android:contentDescription="@string/rotate_icon_desc"
                android:padding="8dp"
                android:src="@drawable/ic_crop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:padding="8dp"
                android:text="@string/crop_img"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>