<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorXMediaPrimaryDark">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineTop"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.huawei.hms.image.vision.crop.CropLayoutView
        android:id="@+id/cropImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTop" />

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        android:contentDescription="@string/image_background_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutRbGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorXMediaPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/layoutCropButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBottom">

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rb_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_circular"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginEnd="12dp"/>

            <RadioButton
                android:id="@+id/rb_rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_rectangle"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutCropButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:background="@color/colorXMediaPrimaryDark"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutRbGroup">


        <LinearLayout
            android:id="@+id/btnFlipHorizontally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFlipHorizontally"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorXMediaPrimaryDark"
                android:padding="8dp"
                android:contentDescription="@string/flip_icon_desc"
                android:src="@drawable/ic_baseline_flip" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/flip_h"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnFlipVertically"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFlipVertically"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorXMediaPrimaryDark"
                android:padding="8dp"
                android:contentDescription="@string/flip_icon_desc"
                android:src="@drawable/ic_baseline_flip" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/flip_v"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnRotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorXMediaPrimaryDark"
                android:padding="8dp"
                android:contentDescription="@string/rotate_icon_desc"
                android:src="@drawable/ic_baseline_crop_rotate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/rotate"
                android:textSize="12sp"
                android:textColor="@color/white" />
        </LinearLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>