<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorXMediaPrimaryDark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutEmptyProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <ImageView
            android:id="@+id/ivEmptyProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_folder_projects"
            android:contentDescription="@string/projects_folder_desc"
            app:layout_constraintBottom_toTopOf="@+id/tvEmptyProjectTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvEmptyProjectTitle"
            style="@style/home_text_style_semi_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_project_title"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvEmptyProjectDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivEmptyProject" />

        <TextView
            android:id="@+id/tvEmptyProjectDesc"
            style="@style/home_text_style_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_project_desc"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmptyProjectTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>